# aiogram3-boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: app.py  bot.py
bot/customs/: bot.py  dispatcher.py
bot/filters/: regexp.py
bot/views/: __init__.py
bot/views/admin/: __init__.py  status.py
bot/views/common/: __init__.py  cbdata.py  errors.py  inform.py  plugs.py
bot/views/menu/: __init__.py  agency.py  start.py  support.py
transport/: client.py  exceptions.py
utils/: dtformater.py  getenv.py  rds.py  tunneling.py
